--- a/FocusFinderApp/Views/Home/Index.cshtml
+++ b/FocusFinderApp/Views/Home/Index.cshtml
@@ -45,7 +45,7 @@
                                       <form method="post" asp-controller="Bookmark" asp-action="Add">
                                         <input type="hidden" name="locationId" value="@location.Id">
                                         <input type="hidden" name="redirectUrl" value="@Context.Request.Path">
-                                        <button type="submit" class="bookmark-button ab bookmarked"></button>
+                                        <button type="submit" class="bookmark-button ab unbookmarked"></button>
                                       </form>
                                   }
                                 }
