--- a/FocusFinderApp/wwwroot/css/home.css
+++ b/FocusFinderApp/wwwroot/css/home.css
@@ -126,11 +126,12 @@
 .m-rating {
     display: flex;
     flex-direction: row;
+    z-index: 98;
 }
 
 .star img {
     height: 1rem;
     width: 1rem;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    margin-left: 0.4rem
+    margin-left: 0.4rem;
   }
