Suggest a space form now works (for signed in users) but can be seen by all on /SuggestedLocations

--- a/FocusFinderApp/Views/Users/Profile.cshtml
+++ b/FocusFinderApp/Views/Users/Profile.cshtml
@@ -32,6 +32,7 @@
             <a href="/Bookmarks" class="btn btn-info">View Bookmarked Locations</a>
             <a href="/Reviews" class="btn btn-info">View My Reviews</a>
             <a href="/Achievements" class="btn btn-info">View Achievements</a>
+            <a href="/NewLocationForm" class="btn btn-info">Suggest A Location</a>
         </div>
         
         <hr>
