--- a/FocusFinderApp/Views/SuggestedLocations/NewLocation.cshtml
+++ b/FocusFinderApp/Views/SuggestedLocations/NewLocation.cshtml
@@ -4,80 +4,96 @@
 
 @{Console.WriteLine("Reached - NewLocation.cshtml");}
 
-@* <head>
-    <link rel="stylesheet" href="~/css/home.css" asp-append-version="true" />
-</head> *@
-
 <div class="i-body-top body-top">
     <div class="text-center">
         <h1 class="display-4">Suggest A New Location</h1>
     </div>
 </div>
 
-@{
-    if (ViewBag.IsLoggedIn == null || ViewBag.IsLoggedIn == false)
-    {
-        <h5>Please login to suggest a new location</h5>
-        <a href="/Login" class="btn btn-primary">Go to Login</a>
-    }
-    else{
-        <p>Please make sure to fill in all the boxes below, or we may not be able to approve your suggested location.</p>
-        
-        <form method="post" asp-controller="Location" asp-action="NewLocationForm">
-            <fieldset>
-                <!-- New Form -->
-                <div>
-                    <label for="SuggestedLocationName">What is this location called?</label>
-                    <input name="SuggestedLocationName"/>
-                </div>
-                <div>
-                    <label for="Description">Please give a brief description of this location</label>
-                    <input name="Description"/>
-                </div>
-                <div>
-                    <label for="BuildingIdentifier">Building Number/Name</label>
-                    <input name="BuildingIdentifier"/>
-                </div>
-                <div>
-                    <label for="StreetAddress">Street Address</label>
-                    <input name="StreetAddress"/>
-                </div>
-                <div>
-                    <label for="City">City</label>
-                    <input name="City"/>
-                </div>
-                <div>
-                    <label for="County">County</label>
-                    <input name="County"/>
-                </div>
-                <div>
-                    <label for="Postcode">Postcode</label>
-                    <input name="Postcode"/>
-                </div>
-                <div>
-                    <label for="ImageURL">URL of an image of the location (if possible)</label>
-                    <input name="ImageURL"/>
-                </div>
-                <div>
-                    <label for="locationURL">Location's Website</label>
-                    <input name="locationURL"/>
-                </div>
-                <div>
-                    <label for="Latitude">Latitude (can be found using Google Maps)</label>
-                    <input name="Latitude"/>
-                </div>
-                <div>
-                    <label for="Longitude">Longitude (can be found using Google Maps)</label>
-                    <input name="Longitude"/>
-                </div>
+@if (ViewBag.IsLoggedIn == null || ViewBag.IsLoggedIn == false)
+{
+    <h5>Please login to suggest a new location</h5>
+    <a href="/Login" class="btn btn-primary">Go to Login</a>
+}
+else
+{
+    <p>Please fill in the required fields. The location will be reviewed before approval.</p>
 
+    <form method="post" asp-controller="Location" asp-action="GetNewLocation" id="locationForm">
+        <fieldset>
+            <!-- Location Name -->
+            <label for="SuggestedLocationName">Location Name</label>
+            <input id="SuggestedLocationName" name="SuggestedLocationName" required/>
 
-                <div>
-                    <button type="submit">Submit Location Suggestion</button>
-                </div>
-                
-            </fieldset>
-        </form>
-        
-    }
+            <!-- Description -->
+            <label for="Description">Description</label>
+            <input id="Description" name="Description"/>
+
+            <!-- Building Identifier -->
+            <label for="BuildingIdentifier">Building Number/Name</label>
+            <input id="BuildingIdentifier" name="BuildingIdentifier"/>
+
+            <!-- Street Address -->
+            <label for="StreetAddress">Street Address</label>
+            <input id="StreetAddress" name="StreetAddress" required/>
+
+            <!-- City -->
+            <label for="City">City</label>
+            <input id="City" name="City" required/>
+
+            <!-- County -->
+            <label for="County">County</label>
+            <input id="County" name="County"/>
+
+            <!-- Postcode -->
+            <label for="Postcode">Postcode</label>
+            <input id="Postcode" name="Postcode" required/>
+
+            <!-- Image URL -->
+            <label for="ImageURL">Image URL (optional)</label>
+            <input id="ImageURL" name="ImageURL"/>
+
+            <!-- Website URL -->
+            <label for="locationURL">Location Website (optional)</label>
+            <input id="locationURL" name="locationURL"/>
+
+            <!-- Auto-Fetch Lat & Lng -->
+            <button type="button" onclick="getCoordinates()">Get Coordinates</button>
+
+            <!-- Latitude -->
+            <label for="Latitude">Latitude</label>
+            <input id="Latitude" name="Latitude" readonly required/>
+
+            <!-- Longitude -->
+            <label for="Longitude">Longitude</label>
+            <input id="Longitude" name="Longitude" readonly required/>
+
+            <!-- Submit -->
+            <button type="submit">Submit Location Suggestion</button>
+        </fieldset>
+    </form>
+
+    <!-- Google Maps API for Geolocation -->
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=@ViewBag.GoogleMapsApiKey&callback=initAutocomplete"></script>
+
+    <script>
+        function getCoordinates() {
+            let address = document.getElementById("StreetAddress").value + ", " +
+                          document.getElementById("City").value + ", " +
+                          document.getElementById("County").value + ", " +
+                          document.getElementById("Postcode").value;
+
+            let geocoder = new google.maps.Geocoder();
+            geocoder.geocode({ 'address': address }, function(results, status) {
+                if (status === 'OK') {
+                    let location = results[0].geometry.location;
+                    document.getElementById("Latitude").value = location.lat();
+                    document.getElementById("Longitude").value = location.lng();
+                    console.log("Latitude:", location.lat(), "Longitude:", location.lng());
+                } else {
+                    alert("Geocode was not successful: " + status);
+                }
+            });
+        }
+    </script>
 }
