Ext review 1-5 style ratings are now added as null value to the table if 1-5 isn't selected from dropdown

--- a/FocusFinderApp/Views/Reviews/NewReview.cshtml
+++ b/FocusFinderApp/Views/Reviews/NewReview.cshtml
@@ -33,6 +33,7 @@
                     <div>
                         <label for="rating">Your Overall Rating:</label>
                         <select name="Rating" id="rating">
+                            <option value=null>Please select</option>
                             <option value="1">1 ⭐</option>
                             <option value="2">2 ⭐</option>
                             <option value="3">3 ⭐</option>
@@ -43,6 +44,7 @@
                     <div>
                         <label for="cleanliness">Cleanliness Rating:</label>
                         <select name="Cleanliness" id="cleanliness">
+                            <option value="null">Please select</option>
                             <option value="1">1 - very poor</option>
                             <option value="2">2 - poor</option>
                             <option value="3">3 - acceptable</option>
@@ -53,6 +55,7 @@
                     <div>
                         <label for="noiseLevel">Noise Level Rating (with ideal being quiet study):</label>
                         <select name="NoiseLevel" id="noiseLevel">
+                            <option value="null">Please select</option>
                             <option value="1">1 - very loud</option>
                             <option value="2">2 - moderate noise</option>
                             <option value="3">3 - a little noise</option>
@@ -63,6 +66,7 @@
                     <div>
                         <label for="wifiSpeed"> Wi-Fi Speed Rating:</label>
                         <select name="WifiSpeed" id="wifiSpeed">
+                            <option value="null">Please select</option>
                             <option value="1">1 - very slow</option>
                             <option value="2">2 - slow</option>
                             <option value="3">3 - acceptable</option>
@@ -73,6 +77,7 @@
                     <div>
                         <label for="chargingPointAvailability">Charging Point Availability Rating:</label>
                         <select name="ChargingPointAvailability" id="chargingPointAvailability">
+                            <option value="null">Please select</option>
                             <option value="1">1 - very poor</option>
                             <option value="2">2 - poor</option>
                             <option value="3">3 - acceptable</option>
@@ -83,6 +88,7 @@
                     <div>
                         <label for="seatingAvailability">Seating Availability Rating:</label>
                         <select name="SeatingAvailability" id="seatingAvailability">
+                            <option value="null">Please select</option>
                             <option value="1">1 - very poor</option>
                             <option value="2">2 - poor</option>
                             <option value="3">3 - acceptable</option>
