refactored post method arguments

--- a/FocusFinderApp/Views/Reviews/NewReview.cshtml
+++ b/FocusFinderApp/Views/Reviews/NewReview.cshtml
@@ -122,8 +122,8 @@
                                     }
                                     
                                     var formattedTag = result.ToString();
-                                    <input id="@formattedTag" type="checkbox" />
-                                    <label for="@formattedTag">@formattedTag</label>
+                                    <input id="@col" type="checkbox" />
+                                    <label for="@col">@formattedTag</label>
                                 }
                         </div>
                     </div>
