selecting tags on a review now adds them to the database

--- a/FocusFinderApp/Views/Reviews/NewReview.cshtml
+++ b/FocusFinderApp/Views/Reviews/NewReview.cshtml
@@ -122,7 +122,7 @@
                                     }
                                     
                                     var formattedTag = result.ToString();
-                                    <input id="@col" type="checkbox" />
+                                    <input id="@col" name="@col" type="checkbox" value="true" />
                                     <label for="@col">@formattedTag</label>
                                 }
                         </div>
