--- a/FocusFinderApp/Views/Shared/_Layout.cshtml
+++ b/FocusFinderApp/Views/Shared/_Layout.cshtml
@@ -58,7 +58,7 @@
         <div class="container-fluid desk">
             <form asp-controller="Location" asp-action="Search" method="get" class="search-form">
                 <input type="text" name="searchQuery" placeholder="Search by name or address" class="search-input" required>
-                <button type="submit" class="search-button">&rsaquo;</button>
+                <button type="submit" class="search-button mar-1">&rsaquo;</button>
             </form>
         </div>
         <div class="container-fluid menu-in mob">
