--- a/FocusFinderApp/Views/Users/Register.cshtml
+++ b/FocusFinderApp/Views/Users/Register.cshtml
@@ -1,35 +1,35 @@
 @model FocusFinderApp.Models.User
 <div class="i-container">
-<form class="login-form" action="/Register" method="post">
-    <fieldset>
-        <legend>Register Now</legend>
-        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-        <div class="form-group">
-            <input asp-for="Username" class="form-control" placeholder="Username"/>
-            <span asp-validation-for="Username" class="text-danger"></span>
-        </div>
-        <div class="form-group">
-            <input asp-for="Email" class="form-control" placeholder="Email"/>
-            <span asp-validation-for="Email" class="text-danger"></span>
-        </div>
-        <div class="form-group">
-            <input asp-for="Password" class="form-control" placeholder="Password"/>
-            <span asp-validation-for="Password" class="text-danger"></span>
-        </div>
-        <div class="form-group">
-            <input asp-for="ConfirmPassword" class="form-control" placeholder="Confirm Password"/>
-            <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
-        </div>
-        <div class="form-group" style="display: flex; flex-direction: column; gap: 10px;">
-            <input type="submit" value="Create Account" class="btn btn-primary" />
-            <div>
-                <span>Already have an account? </span>
-                <p>Login</p>
+    <div class="i-location-container i-study-pic-container padded">
+        <form class="login-form" action="/Register" method="post">
+            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <div class="form-group">
+                <input asp-for="Username" class="search-input small-in" placeholder="Username"/>
+                <span asp-validation-for="Username" class="text-danger"></span>
             </div>
-        </div>
-    </fieldset>
-</form>
+            <div class="form-group">
+                <input asp-for="Email" class="search-input small-in" placeholder="Email"/>
+                <span asp-validation-for="Email" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <input asp-for="Password" class="search-input small-in" placeholder="Password"/>
+                <span asp-validation-for="Password" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <input asp-for="ConfirmPassword" class="search-input small-in" placeholder="Confirm Password"/>
+                <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
+            </div>
+            <div class="form-group" style="display: flex; flex-direction: column; gap: 10px;">
+                <input type="submit" value="Create Account" class="search-button bar"/>
+                <div>
+                    <span>Already have an account? </span>
+                    <a href="/Login" class="btn">Login</a>
+                </div>
+            </div>
+        </form>
+    </div>
 </div>
+<div class="filler"></div>
         
 
 @section Scripts {
