--- a/FocusFinderApp/Views/Home/Index.cshtml
+++ b/FocusFinderApp/Views/Home/Index.cshtml
@@ -26,7 +26,7 @@
                     <div class="i-location-container glow-back i-study-pic-container">
                         <img src="@Url.Content(location.ImageURL)" alt="@location.LocationName">
                         <div class="i-location-info">
-                            <div class="m-header"><h2>@location.City</h2></div>
+                            <div class="m-header"><h1>@location.LocationName</h1><h3>@location.City</h3></div>
                             <div class="i-bookmark-container">
                                 @if (ViewBag.IsLoggedIn == true)
                                 {
