--- a/FocusFinderApp/Views/Reviews/IndivReview.cshtml
+++ b/FocusFinderApp/Views/Reviews/IndivReview.cshtml
@@ -3,6 +3,8 @@
     ViewData["Title"] = "Reviews";
 }
 
+<div class="i-container">
+
 <div>
     @{
         if (ViewBag.IsLoggedIn == null || ViewBag.IsLoggedIn == false)
@@ -122,5 +124,4 @@
     }
     
 </div>
-
-
+</div>
