--- a/FocusFinderApp/Views/Reviews/NewReview.cshtml
+++ b/FocusFinderApp/Views/Reviews/NewReview.cshtml
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="~/css/home.css" asp-append-version="true" />
 </head>
 
+<div class="i-container">
+
 <div class="i-body-top body-top">
     <div class="text-center">
         <h1 class="display-4">Create A New Review</h1>
@@ -141,4 +143,5 @@
             </form>
         }
     }
+</div>
 </div>
