profile links now in a column

--- a/FocusFinderApp/Views/Reviews/NewReview.cshtml
+++ b/FocusFinderApp/Views/Reviews/NewReview.cshtml
@@ -24,7 +24,7 @@
         if (ViewBag.IsLoggedIn == null || ViewBag.IsLoggedIn == false)
         {
             <h5>Please login to create a review</h5>
-            <a href="/Login" class="btn btn-primary">Go to Login</a>
+            <a href="/Login" class="btn">Go to Login</a>
         }
         else{
             <p>TEST - location id @ViewBag.locId</p>
