--- a/FocusFinderApp/Views/Reviews/IndivReview.cshtml
+++ b/FocusFinderApp/Views/Reviews/IndivReview.cshtml
@@ -2,6 +2,9 @@
 @{
     ViewData["Title"] = "Reviews";
 }
+<head>
+    <link rel="stylesheet" href="~/css/home.css" asp-append-version="true" />
+</head>
 
 <div class="i-container">
 
@@ -30,7 +33,12 @@
                     }
 
                     if (@ViewBag.Review.overallRating != null){
-                        <p>Overall Rating: @ViewBag.Review.overallRating⭐</p>
+                        <div class="flex-row">
+                            <p class="beige">Rating: </p>
+                            @for (decimal i = 0.5M; i < @ViewBag.Review.overallRating; i++){
+                                <div class="star"><img src="../images/icons/star-4p.png" alt="Star"></div>
+                                }
+                        </div>
                     } 
                     
                 }
